# mmm

./: .replit  budget_optimizer_direct_fix.py  budget_optimizer_fix.py  budget_optimizer_fix_results.json  channel_impact_enhancement.py  channel_impact_example.json  channel_impact_structure.json  create_test_user.js  direct_fix.py  direct_mmm_test.py  enhance_model.py  enhanced_optimizer.py  enhanced_results.json  enhanced_test_log.txt  extract_model_14.js  extract_model_14.mjs  fix_train_mmm.py  fixed_optimizer.py  fixed_params_results.json  fixed_saturation.py  minimal_channel_impact_test.py  model_14_enhanced_structure.json  model_api_response.json  optimizer_fix_direct.py  optimizer_fix_only.py  optimizer_results.json  optimizer_test_config.json  package-lock.json  package.json  pyproject.toml  run_direct_mmm_test.py  run_model_14.py  run_robust_test.py  sample_enhanced_output.json  scaling_fix.py  service_test_30pct_increase.json  service_test_results.json  simplified_test_config.json  stronger_diversity.py  temp_config.json  (+63 more)
attached_assets/: Pasted--Agent-the-user-has-a-very-valid-concern-that-any-forced-diversity-protector-or-similar-heuristic-1747618283792.txt  Pasted--Results-Transformer-Fix-Instructions-For-Replit-Let-s-fix-the-results-transformer-to-ensur-1747976529112.txt  Pasted--params-beta-coefficient-0-2-print-f-DEBUG-Created-default-beta-1747621146072.txt  Pasted--usr-bin-env-python-MMM-implementation-using-fixed-parameters-point-estimates-with-global--1747983889978.txt  (+148 more)
client/: index.html
python_scripts/: fit_mmm_fixed_params.py  fit_mmm_ridge.py  (+24 more)
(+115 files in other folders)
